# vitae

./: .env.example  .gitignore  CONTRIBUTING.md  GUIA.md  GUIDE.md  LICENSE  README.md  alembic.ini  arquivoTesteLogs.py  build.py  config.sh  index.html  prepare_files.py  pyproject.toml  requirements.txt  ruff.toml  runall.sh  scrapperXML.py  teste2.py  varredura01.py  varredura02.py  varreduraDir.py  vitae.example.toml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 56fa797b055e_create_tables.py
ambienteCurricFilter/: pyvenv.cfg
ambienteCurricFilter/Scripts/: activate  activate.bat
app/src/: scrapperXML.py  varreduraDir.py
app/src/database/: databaseConfig.py  databaseCreation.py
app/src/models/: experiencia.py  formacao.py  pesquisador.py
csv/: teste.txt
migrations/: env.py
migrations/versions/: 0fedd01e8d5b_initial_migration.py  56fa797b055e_create_tables.py  7599779f6036_add_unique_constraints.py
queries/: README.md  all_advisors.sql  all_countries.csv  all_countries.json  all_degree.json  all_degrees.csv  all_states.csv  all_states.json  exp_sub.csv  exp_sub.json  specialty.csv  specialty.json  substudyfields.csv  substudyfields.json
scripts/: clear.py  find_byte.py  preprocess.py
src/: __main__.py  __setup__.py  database.py  lattes_parser.py  main.py  models.py  panic.py  scrapperXML.py  session.py  settings.py  shared.py  varreduraDir.py
src/core/: __init__.py
src/database/: databaseConfig.py  databaseCreation.py  database_config.py  database_creation.py
src/features/: __init__.py
src/features/database/: __init__.py  put.py
src/features/ingestion/: __init__.py  cli.py  converter.py  debug.py  log.py  repository.py  scanner.py  scanners.py  schema.py  usecase.py  usecases.py
src/features/ingestion/domain/: __init__.py
src/features/ingestion/parser/: __init__.py  _log.py  _xml.py  academic_background.py  general_data.py  knowledge_areas.py  professional_experiences.py  research_area.py
src/infra/database/: __init__.py  put.py  schema.py
src/lib/: buffer.py  functions.py  loggers.py  panic.py  result.py
src/models/: __core__.py  __init__.py  academic_background.py  experiencia.py  formacao.py  knowledge_area.py  pesquisador.py  professional_experience.py  research_area.py  researcher.py
src/parsing/: buffers.py  dir_scanning.py  load.py  parser.py  scheduler.py
src/parsing/extract/: dir_scanning.py  lattes_parser.py
src/pipeline_etl/: load.py
src/pipeline_etl/extract/: dir_scanning.py  lattes_parser.py
src/processing/: __init__.py  buffers.py  commiter.py
src/processing/commiter/: __init__.py  commiter.py
src/processing/parsing/: __init__.py  academic_background.py  general_data.py  knowledgment_areas.py  logging.py  parser.py  professional_experiences.py  research_area.py
src/processing/proxies/: __init__.py
src/processing/scheduler/: __init__.py
src/scheduler/: __init__.py
src/utils/: buffer.py  functions.py  loadEnv.py  load_env.py  loggers.py  panic.py  result.py  settings.py
tests/: README.md  conftest.py  test_either.py  test_result.py  utils.py
tests/ingestion/parsing/: test_address.py  test_education.py  test_experience.py  test_institutions.py  test_researcher.py  utils.py
utils/: loadEnv.py  loggers.py
vitae/: README.md  __main__.py  __setup__.py  app.py  settings.py  shared.py
vitae/core/: __init__.py
vitae/features/bootstrap/: README.md  cli.py  usecase.py
vitae/features/ingestion/: README.md  __init__.py  cli.py  repository.py  scanners.py  usecase.py
vitae/features/researchers/: README.md  app.py  cli.py  routes.py  templates.py
vitae/infra/database/: __init__.py  bulk_transactions.py  put.py  settings.py  transactions.py
vitae/lib/: functions.py  panic.py  result.py
vitae/settings/: database.py  logging.py  vitae.py
(+162 files in other folders)
