[tool.poetry]
name = "vitae"
version = "1.0.0-pre"
description = ""
authors = ["Thiago Sena", "RickBarretto"]
maintainers = ["Angelo Loula <angelocl@uefs.br>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "vitae" }
]


[tool.poetry.scripts]
vitae = "vitae.__main__:cli"
find-byte = "scripts.find_byte:main"
pre-process = "scripts.preprocess:cli"
clear-cache = "scripts.clear:cache"
clear-log = "scripts.clear:log"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
attrs = "^25.3.0"
cyclopts = "^3.19.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlmodel = "^0.0.24"
psycopg = {extras = ["binary"], version = "^3.2.7"}
loguru = "^0.7.3"
jinja2 = "^3.1.6"
jinjax = "^0.60"
cattrs = "^25.1.1"
flaskwebgui = "^1.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
ty = "^0.0.1a5"
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
beautifulsoup4 = "^4.13.4"
pyinstaller = "^6.15.0"

[tool.pytest.ini_options]
testpaths = [
    "vitae",
    "tests",
    "integration",
]
python_files = ["*test_*.py", "*_spec.py", "_*_spec.py"]
python_classes = ["Test*", "Suite*", "Spec*", "Describe*"]
python_functions = [
    "test_*", 
    "should_*", 
    "it_*", 
    "its_*", 
    "has_*", 
    "is_*", 
    "have_*", 
    "are_*", 
    "when_*", 
    "and_*", 
    "can_*", 
    "raises_*",
    "supports_*"
]
console_output_style = "progress"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests/*",
    "*/test_*.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
